old_tests/tests/lean/exact_error_pos.lean.expected.out
exact_error_pos.lean:7:14: error: type mismatch at application
  f 0 tt
term
  tt
has type
  bool
but is expected to have type
  ℕ
state:
⊢ ℕ
exact_error_pos.lean:15:14: error: type mismatch at application
  f 0 tt
term
  tt
has type
  bool
but is expected to have type
  ℕ
state:
⊢ ℕ
