old_tests/tests/lean/exact_error_pos.lean
constant f : nat → nat → nat


def ex1 : nat :=
begin
  exact 10 +
        (f 1 (f 0 tt))

end


def ex₂ : nat :=
begin
  apply 10 +
        (f 1 (f 0 tt))
end
